latency compensation working. immutable data. things are looking good

--- a/examples/neo4j/main.html
+++ b/examples/neo4j/main.html
@@ -8,6 +8,6 @@
     <button>submit</button>
   </div>
   {{#each msgs}}
-    <div class="row">{{text}}</div>
+    <div class="row">{{text}}{{#if unverified}}*{{/if}}</div>
   {{/each}}
 </template>
